# codetyper

./: .gitignore  CLEANUP_CHECKLIST.md  DISTRIBUTION.md  DOCS_SETUP.md  INSTALL.md  LICENSE  PACKAGING_SUMMARY.md  QUICKSTART.md  README.md  WEBSITE_SUMMARY.md  codetyper.py  config_schema.py  demo_from_script.py  great-docs.yml  pyproject.toml  requirements.txt
examples/: example_script.R  example_script.py
src/codetyper/: __init__.py  __main__.py  app.py  cli.py  config.py  engine.py  exceptions.py  executor.py  formatter.py  parser.py  writer.py
src/positron_codetyper/: __init__.py  __main__.py  app.py  cli.py  engine.py  parser.py  templates.py
tests/: test_parser.py
user_guide/: installation.qmd  quickstart.qmd  script-format.qmd
