[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetyper"
version = "0.1.0"
description = "Create realistic typing demonstrations for coding tutorials"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Isabella Velasquez"}
]
dependencies = [
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "typer>=0.9.0",
]

[project.scripts]
codetyper = "codetyper.cli:main"

[project.urls]
Homepage = "https://github.com/ivelasq/codetyper"

[tool.setuptools.packages.find]
where = ["src"]
